# audioshift

./: .clang-format  .cliff.toml  .editorconfig  .gitignore  CHANGELOG.md  DISCOVERY_LOG.md  Doxyfile  EXECUTIVE_SUMMARY.md  LICENSE  MASTER_ACTION_PLAN.md  MASTER_CLASS_PROMPT_CLAUDE_CODE.md  NEXT_STEPS_MASTER_ACTION_PLAN.md  PHASE_5_SPRINT_COMPLETION_SUMMARY.md  PHASE_6_COMPLETION_SUMMARY.md  PHASE_7_RELEASE_GUIDE.md  PROJECT_EXECUTIVE_SUMMARY.md  README.md  VERIFICATION_CHECKLIST.md  WEEKLY_SYNC_TEMPLATE.md  mkdocs.yml  requirements.txt
.github/workflows/: aosp_build.yml  build_and_test.yml  device_validation.yml  docs.yml  magisk_submission.yml  performance_profile.yml  release.yml
.history/: DISCOVERY_LOG_20260223072746.md  DISCOVERY_LOG_20260223073158.md
.history/ci_cd/: README_20260223074859.md  README_20260223080810.md  build_and_test_20260223074824.yml
.history/examples/: CMakeLists_20260223074958.txt  README_20260223075031.md  README_20260223080809.md  basic_432hz_usage_20260223074944.cpp
.history/path_b_rom/build_scripts/: build_rom_20260223071757.sh
.history/path_c_magisk/: DISCOVERIES_PATH_C_20260223072746.md  DISCOVERIES_PATH_C_20260223073158.md
.history/path_c_magisk/module/: module_20260223071757.prop
.history/path_c_magisk/module/common/: post-fs-data_20260223071757.sh  service_20260223070535.sh
.history/path_c_magisk/native/: CMakeLists_20260223071757.txt  audioshift_hook_20260223070157.h  audioshift_hook_20260223070439.cpp  audioshift_hook_20260223071758.h
.history/path_c_magisk/tools/: verify_432hz_20260223071031.sh  verify_432hz_20260223071336.py
.history/shared/audio_testing/src/: frequency_validator_20260223075319.h  frequency_validator_20260223075415.cpp  frequency_validator_20260223080812.cpp  sine_generator_20260223075252.h  sine_generator_20260223075339.cpp  sine_generator_20260223080812.h
.history/shared/audio_testing/tests/: CMakeLists_20260223075813.txt  test_frequency_validator_20260223075757.cpp  test_sine_generator_20260223075508.cpp
.history/synthesis/: PATENT_IDEAS_20260223072310.md  PATENT_IDEAS_20260223072618.md  PHASE3_INSIGHTS_20260223072309.md
.history/tests/integration/: test_432hz_device_20260223071801.sh
.history/tests/unit/: CMakeLists_20260223073700.txt  android_mock_20260223073714.h  android_mock_20260223080809.h  test_effect_context_20260223074433.cpp  test_pcm_conversion_20260223074030.cpp  test_pitch_ratio_20260223073753.cpp
docs/: ANDROID_INTERNALS.md  API_REFERENCE.md  ARCHITECTURE.md  DEVELOPMENT_GUIDE.md  DEVICE_SUPPORT.md  FAQ.md  GETTING_STARTED.md  TROUBLESHOOTING.md  XDA_POST_TEMPLATE.md  index.md
examples/: basic_432hz_usage.cpp
examples/audioshift_prefs/: AndroidManifest.xml  README.md  build.gradle.kts
examples/audioshift_prefs/res/values/: strings.xml
path_b_rom/: DISCOVERIES_PATH_B.md  INTEGRATION_NOTES.md  README_PATH_B.md
path_b_rom/build_scripts/: apply_patches.sh
path_b_rom/device_configs/: audio_policy_configuration.xml  mixer_paths.xml
path_b_rom/kernel/: audioshift_dsp.patch  galaxy_s25plus_defconfig
path_c_magisk/: DISCOVERIES_PATH_C.md  README_PATH_C.md
path_c_magisk/build_scripts/: build_module.sh
path_c_magisk/native/: CMakeLists.txt  audioshift_hook.cpp
research/: CODEC_LATENCY_ANALYSIS.md  VOIP_AUDIO_ANALYSIS.md  pitch_conversion_math.md
scripts/: build_all.sh  collect_research.sh  setup_aosp_environment.sh  setup_environment.sh  setup_selfhosted_runner.sh  update_discovery_log.sh
scripts/aosp/: configure_build.sh  init_aosp_repo.sh
scripts/codec/: detect_bluetooth_codec.sh
scripts/profile/: analyze_flamegraph.py  build_profiling_rom.sh  record_flamegraph.sh
scripts/tests/: device_frequency_validation.sh  device_latency_gate.sh
scripts/verify/: verify_magisk_module.sh
scripts/voip/: detect_call_mode.sh
shared/audio_testing/src/: CMakeLists.txt  frequency_validator.h  sine_generator.cpp
shared/audio_testing/tests/: test_frequency_validator.cpp  test_sine_generator.cpp
shared/dsp/: CMakeLists.txt
shared/dsp/build_host/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  audioshift_dsp.sln  audioshift_dsp.vcxproj  audioshift_dsp.vcxproj.filters  cmake_install.cmake  soundtouch_internal.vcxproj  soundtouch_internal.vcxproj.filters
shared/dsp/build_host/Release/: soundtouch_internal.lib
shared/dsp/build_host/audioshift_dsp.dir/Release/: audioshift_dsp.dll.recipe
shared/dsp/build_host/audioshift_dsp.dir/Release/audioshift_dsp.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  audioshift_dsp.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
shared/dsp/build_host/soundtouch_internal.dir/Release/: soundtouch_internal.lib.recipe
shared/dsp/build_host/soundtouch_internal.dir/Release/soundtou.951A46C1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
shared/dsp/build_host/tests/: CTestTestfile.cmake  cmake_install.cmake  test_audio_432hz.vcxproj  test_audio_432hz.vcxproj.filters
shared/dsp/build_host/tests/test_audio_432hz.dir/Release/test_audio_432hz.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  test_audio_432hz.lastbuildstate
shared/dsp/build_host/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
shared/dsp/include/: audio_432hz.h  audio_pipeline.h
shared/dsp/src/: audio_432hz.cpp  audio_pipeline.cpp
shared/dsp/tests/: CMakeLists.txt  test_audio_432hz.cpp
synthesis/: PHASE3_INSIGHTS.md
tests/integration/: test_432hz_device.sh
tests/performance/: CMakeLists.txt  bench_latency.cpp  benchmark_latency.sh
tests/regression/: run_regression.sh
tests/unit/: test_effect_context.cpp  test_fft_analysis.py  test_pcm_conversion.cpp  test_pitch_ratio.cpp
(+11 files in other folders)
